--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "expo-secure-store": "~14.0.0",
-    "expo-local-authentication": "~15.0.1"
+    "expo-local-authentication": "~15.0.1",
+    "expo-mail-composer": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
