--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 EXPO_USE_FAST_RESOLVER=1
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_d2VsY29tZWQtdGVycmFwaW4tNy5jbGVyay5hY2NvdW50cy5kZXYk
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyC8-9YZK8j4OWh6p6JqggOUdEKSd_xXLQw
+EXPO_PUBLIC_FIREBASE_APP_ID=1:725914265093:web:38480808080808080808
